--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-tilt": "^1.0.2",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.0.6",
     "typed.js": "^2.1.0"
   },
